--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ set(gloox_DIR "${CMAKE_SOURCE_DIR}/cmake_modules")
 find_package(gloox REQUIRED)
 set(purple_DIR "${CMAKE_SOURCE_DIR}/cmake_modules")
 find_package(purple REQUIRED)
+set(libcurl_DIR "${CMAKE_SOURCE_DIR}/cmake_modules")
+find_package(libcurl REQUIRED)
 set(glib_DIR "${CMAKE_SOURCE_DIR}/cmake_modules")
 find_package(glib REQUIRED)
 set(libpoco_DIR "${CMAKE_SOURCE_DIR}/cmake_modules")
@@ -32,6 +34,7 @@ message(STATUS "Python site-packages directory: "  ${PYTHON_SITE_PACKAGES})
 
 include_directories(${GLOOX_INCLUDE_DIR})
 include_directories(${PURPLE_INCLUDE_DIR})
+include_directories(${LIBCURL_INCLUDE_DIR})
 include_directories(${EVENT_INCLUDE_DIRS})
 include_directories(${LIBPOCO_INCLUDE_DIR})
 
@@ -80,9 +83,9 @@ FILE(GLOB spectrum_SRCS src/*.cpp src/protocols/*.cpp src/adhoc/*.cpp)
 add_executable(spectrum ${spectrum_SRCS} ${lrelease_outputs})
 
 if(DEFINED WITH_STATIC_GLOOX)
-	target_link_libraries(spectrum ${WITH_STATIC_GLOOX} -lgnutls ${PURPLE_LIBRARY} ${GLIB2_LIBRARIES} ${LIBPOCO_LIBRARIES} ${EVENT_LIBRARIES} ${Magick_LIBRARY} -export-dynamic)
+	target_link_libraries(spectrum ${WITH_STATIC_GLOOX} -lgnutls ${PURPLE_LIBRARY} ${LIBCURL_LIBRARY} ${GLIB2_LIBRARIES} ${LIBPOCO_LIBRARIES} ${EVENT_LIBRARIES} ${Magick_LIBRARY} -export-dynamic)
 else(DEFINED WITH_STATIC_GLOOX)
-	target_link_libraries(spectrum ${GLOOX_LIBRARIES} ${PURPLE_LIBRARY} ${GLIB2_LIBRARIES} ${LIBPOCO_LIBRARIES} ${EVENT_LIBRARIES} ${Magick_LIBRARY} -export-dynamic)
+	target_link_libraries(spectrum ${GLOOX_LIBRARIES} ${PURPLE_LIBRARY} ${LIBCURL_LIBRARY} ${GLIB2_LIBRARIES} ${LIBPOCO_LIBRARIES} ${EVENT_LIBRARIES} ${Magick_LIBRARY} -export-dynamic)
 endif(DEFINED WITH_STATIC_GLOOX)
 
 message(STATUS "Transport will be installed into: " ${CMAKE_INSTALL_PREFIX})
